fix: enlarge section sizing on mobile breakpoints

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@
 
     main {
         padding: 0rem 1rem;
-        width: 80vw;
+        width: 100%;
         max-width: 1200px;
         display:flex;
         flex: 1;
@@ -356,49 +356,51 @@
     }
 }
 
-
 @layer mobile-override {
     @media only screen and (max-width: 600px) {
-    .project-grid, #social-links {
-        flex-direction: column;
-    }
-    header {
-        #burger-menu {
-            display: inline-block;
-            text-align:left;
-            color: var(--text-color);
-            font-weight: 500;
-            font-family: "Clash Display";
-            font-size: 1rem;
+        .project-grid, #social-links {
+            flex-direction: column;
         }
-        nav {
-            grid-template-columns: 1fr 1fr;
-            ul[popover] {
-                flex-direction: column;
-                gap: 1rem;
-                display: none;
-
-                transition: opacity 0.25s ease, transform 0.25s ease;
-                opacity: 0;
-                transform: translateY(-10px);
+        section {
+            width: 100%;
+        }
+        header {
+            #burger-menu {
+                display: inline-block;
+                text-align:left;
+                color: var(--text-color);
+                font-weight: 500;
+                font-family: "Clash Display";
+                font-size: 1rem;
             }
-            ul[popover]:popover-open {
-                display: flex;
-                padding: 2rem;
-                border-bottom: var(--border-settings);
+            nav {
+                grid-template-columns: 1fr 1fr;
+                ul[popover] {
+                    flex-direction: column;
+                    gap: 1rem;
+                    display: none;
 
-                /* Animate popover opening */
-                opacity: 1;
-                transform: translateY(0);
-                @starting-style {
+                    transition: opacity 0.25s ease, transform 0.25s ease;
                     opacity: 0;
                     transform: translateY(-10px);
                 }
+                ul[popover]:popover-open {
+                    display: flex;
+                    padding: 2rem;
+                    border-bottom: var(--border-settings);
+
+                    /* Animate popover opening */
+                    opacity: 1;
+                    transform: translateY(0);
+                    @starting-style {
+                        opacity: 0;
+                        transform: translateY(-10px);
+                    }
+                }
+            }
+            .logo {
+                display: none;
             }
         }
-        .logo {
-            display: none;
-        }
-    }
     }
 }
